[package]
name = "py_pathfinding"
description = "A* and Jump-Point-Search algorithms using ndarray which makes them easy to use via pyo3 in Python."
authors = ["BuRny <gamingburny@gmail.com>"]
repository = "https://github.com/BurnySc2/rust_pathfinding"
readme = "README.md"
license = "MIT"
edition = "2018"
categories = ["algorithms"]
keywords = ["astar", "jps", "jumppointsearch"]
version = "0.1.5"
exclude = [
    ".github/*",
    "*.txt"
]

[dependencies]
ndarray = "0.13"
fasthash = "0.4"